# p-SWAMP

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT  LICENSE.template  README.md  genindex.html  grid_database.db  index.html  kafka.html  models.html  objects.inv  p-swamp.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.html  templates.html  testing.html
.github/workflows/: docs.yml
_sources/: index.rst.txt  kafka.rst.txt  models.rst.txt  templates.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/pswamp/: index.rst.txt
autoapi/: index.html
autoapi/pswamp/: index.html
autoapi/pswamp/app_templates/: index.html
autoapi/pswamp/coordination/: index.html
autoapi/pswamp/database/: index.html
autoapi/pswamp/gui/: index.html
autoapi/pswamp/models/: index.html
autoapi/pswamp/monitoring/: index.html
autoapi/pswamp/streaming/: index.html
autoapi/pswamp/styles/: index.html
dev/: interscada_fmt.py  pmu_fmt_tops.json  read_database.py  read_database_2.py  test_serdes.py
docs/source/: conf.py  models_example.py  p-swamp.rst  testing.rst
examples/: example_n44.html  example_n44_multi_tso.html  index.html  read_database.py  single_line_diagram.py
examples/k2a_rtsim/: config.toml  run_case.py  run_sim.py  sim.py  test.py  update_database.py
examples/nordic44_rtsim/: config.toml  config_mqtt.toml  grid_database.db  n44_model.py  readme.md  run_case.py  run_case_from_c37118.py  run_case_mqtt.py  run_case_offline.py  run_gui.py  run_sim.py  sim.py  startup_apps.toml  topsrt_random_load_variations.py
src/pswamp/: __init__.py
tests/: __init__.py  test_imports.py  test_mock_case.py  test_run_simple_case_kafka.py  test_run_simple_case_nqkafka.py
tests/app_templates/: offline_test_2.py  test_console_popup.py  test_snapshot_app.py  test_time_window_app.py
tests/database/: test_db.py
tests/load_config_test/: config 2.toml  load_config.py  test_load_config.py
tests/monitoring/: test_islanding.py  test_n4sid_offline.py  test_time_window_app.py  test_time_window_labeled.py
tests/streaming/: test_kafka.py  test_kafka_io.py  test_mqtt.py  test_mqtt_io.py  test_nqkafka.py  test_nqkafka_io.py
(+480 files in other folders)
